# Money-Laundering-Detection

./: .gitignore  EDA.ipynb  app_upload_sample.ipynb  export.ipynb  main.ipynb  main.py  patterns.ipynb  pyproject.toml  training_GAT.ipynb  training_TGNAnomaly.ipynb  training_TGNAnomalyUnsupervised.ipynb  training_TGNMemory.ipynb
.ipynb_checkpoints/: main-checkpoint.ipynb  main-checkpoint.py
mlpackages/EdgeClassifier.mlpackage/: Manifest.json
mlpackages/EdgeClassifier.mlpackage/Data/com.apple.CoreML/: model.mlmodel
preprocessors/: edge_preprocessor.joblib  vertex_preprocessor.joblib
runs/Apr21_10-28-14_10-67-32-252.0100.aml1.id.iosda.org/: events.out.tfevents.1776742094.10-67-32-252.0100.aml1.id.iosda.org.71665.0
