[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "pyg-lib==0.6.0+pt211",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv]
environments = ["sys_platform == 'darwin'"]

[tool.uv.sources]
pyg-lib = { index = "pytorch-geometric" }

[[tool.uv.index]]
name = "pytorch-geometric"
url = "http://data.pyg.org/whl/torch-2.11.0+cpu.html"
explicit = true


